@@ -498,12 +498,12 @@ DoubleFloat(): Join(FloatingPointSystem, DifferentialRing, OpenMath,
    cos x            == cos__DF(x)$Lisp
    tan x            == tan__DF(x)$Lisp
    cot x            == COT(x)$Lisp
-   sec x            == SEC(x)$Lisp
-   csc x            == CSC(x)$Lisp
+   sec x            == 1/cos(x)
+   csc x            == 1/sin(x)
    asin x           == checkComplex ASIN(x)$Lisp -- can be complex
    acos x           == checkComplex ACOS(x)$Lisp -- can be complex
    atan x           == atan__DF(x)$Lisp
-   acsc x           == checkComplex ACSC(x)$Lisp
+   acsc x           == asin(1/x)
 
    pi_half : % := pi()/(2::%)
 
@@ -514,19 +514,19 @@ DoubleFloat(): Join(FloatingPointSystem, DifferentialRing, OpenMath,
        not(-1 < x) => pi() - atan(-1/x)
        pi_half + atan(-x)
 
-   asec x           == checkComplex ASEC(x)$Lisp
+   asec x           == acos(1/x)
    sinh x           == sinh__DF(x)$Lisp
    cosh x           == cosh__DF(x)$Lisp
    tanh x           == tanh__DF(x)$Lisp
-   csch x           == CSCH(x)$Lisp
-   coth x           == COTH(x)$Lisp
-   sech x           == SECH(x)$Lisp
+   csch x           == 1/sinh(x)
+   coth x           == 1/tanh(x)
+   sech x           == 1/cosh(x)
    asinh x          == ASINH(x)$Lisp
    acosh x          == checkComplex ACOSH(x)$Lisp -- can be complex
    atanh x          == checkComplex ATANH(x)$Lisp -- can be complex
-   acsch x          == ACSCH(x)$Lisp
-   acoth x          == checkComplex ACOTH(x)$Lisp
-   asech x          == checkComplex ASECH(x)$Lisp
+   acsch x          == asinh(1/x)
+   acoth x          == atanh(1/x)
+   asech x          == acosh(1/x)
    x:% / y:%        == div__DF(x, y)$Lisp
    negative? x      == negative?__DF(x)$Lisp
    zero? x          == zero?__DF(x)$Lisp
